--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 	<head>
 		<link rel="stylesheet" href="styles.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+			rel="stylesheet"
+		/>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
@@ -23,9 +29,9 @@
 					<p>This is so cool, can't wait to start doing more stuff!</p>
 				</div>
 				<div class="body-right">
-					<input value="Some Name" />
+					<input type="text" value="Some Name" />
 					<input type="email" value="Some Email" />
-					<input value="Some comment" />
+					<input type="text" value="Some comment" />
 				</div>
 			</div>
 			<div class="postcard-footer">
